Update FindCommandTest and ClientContainsKeywordsPredicateTest